commiting existing work

--- a/assets/sass/_colors.scss
+++ b/assets/sass/_colors.scss
@@ -1,4 +1,7 @@
 $white: #fff;
+$grey: #ccc;
+$grey_l: #eee;
+$grey_d: #999;
 $notification_grey: #8e8e8e;
 $notification_grey_faded: #e6e6e6;
 $notification_green: #2BDA77;
