--- a/assets/sass/bebop-media.scss
+++ b/assets/sass/bebop-media.scss
@@ -1,122 +1,3 @@
 @import 'colors';
 @import 'extends';
-
-[bebop-media-manage-attachment] {
-	border-bottom: 1px solid #ddd;
-	padding-bottom: 15px;
-	margin-bottom: 15px;
-
-	h3 {
-		margin-top: 0;
-		margin-bottom: 6px;
-	}
-
-	ul {
-		list-style: none;
-		margin: 0;
-
-		li {
-			position: relative;
-			padding:0;
-			margin: 8px 0 0 0;
-
-			&:first-child {
-				margin-top: 0;
-			}
-		}
-	}
-
-	.bebop-media-manage-attachment--size-name {
-		font-size: 14px;
-		display:block;
-	}
-
-	.bebop-media-manage-attachment--size-info {
-		color: #888;
-		display:block;
-		font-size: 11px;
-	}
-}
-
-[bebop-media-manage-attachment--list-item] {
-	padding: 4px 6px 4px 6px;
-
-	&:hover {
-		background-color: $white;
-
-		[bebop-media-manage-attachment--generate] {
-			background-color: #7c7c7c;
-		}
-	}
-
-	&.is-ok {
-		border-left: 4px solid $notification_green;
-		color: $notification_green;
-
-		a {
-			color: $notification_green;
-		}
-	}
-
-	&.is-mismatch {
-		border-left: 4px solid $notification_orange;
-		color: $notification_orange;
-
-		a {
-			color: $notification_orange;
-		}
-	}
-
-	&.is-missing {
-		border-left: 4px solid $notification_red;
-		color: $notification_red;
-	}
-
-	&.is-impossible {
-		border-left: 4px solid $notification_grey;
-		color: $notification_grey;
-	}
-
-	[bebop-media-manage-attachment--actions] {
-		display: inline-block;
-		-webkit-border-radius: 4px;
-		border-radius: 0 4px 4px 0;
-		padding: 0;
-		margin-top: 2px;
-	}
-
-	[bebop-media-manage-attachment--generate] {
-		background-color: #999;
-		color: $white;
-		box-shadow: none;
-		-webkit-box-shadow: none;
-		-webkit-border-radius: 0 2px 2px 0;
-		border-radius: 0 2px 2px 0;
-		font-size: 12px;
-		height: 26px;
-		line-height: 26px;
-		padding: 0 8px;
-		margin: 0;
-		border: none;
-		min-width: 100px;
-		text-align: center;
-
-		&:hover {
-			background-color: #666;
-			color: $white;
-		}
-	}
-}
-
-@media screen and (min-width: 782px) {
-
-	[bebop-media-manage-attachment--list-item] {
-
-		[bebop-media-manage-attachment--actions] {
-			margin-top: 0;
-			position: absolute;
-			top: 0;
-			right: 0;
-		}
-	}
-}
+@import 'regenerate-button';
